--- a/gb/20/1/2/n11762093.md
+++ b/gb/20/1/2/n11762093.md
@@ -1,23 +1,23 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/voebtn370/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/voebtn370/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/voebtn370/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/voebtn370/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/voebtn370/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/voebtn370/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/voebtn370/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/voebtn370/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/voebtn370/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/voebtn370/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/voebtn370/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/voebtn370/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/voebtn370/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/voebtn370/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/voebtn370/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/voebtn370/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/voebtn370/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/voebtn370/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/voebtn370/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/voebtn370/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/voebtn370/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/voebtn370/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/voebtn370/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/voebtn370/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>硅谷山景城   率先实施雇员人头税 年增约600万美元</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/1812242234462190-600x400.jpg" />
 <h6>雇员人头税收政策，主要针对谷歌（Google）这样的大型高科技公司。图为谷歌公司目前在山景城的总部园区。(Brooks Kraft LLC/Getty)
 </h6>
 <hr>
-<p>【大纪元2020年01月02日讯】（大纪元记者周凤临综合报导）<ahref="https://github.com/voebtn370/djy/blob/master/gb/tag/%E7%A1%85%E8%B0%B7.md#1">硅谷</a><ahref="https://github.com/voebtn370/djy/blob/master/gb/tag/%E5%B1%B1%E6%99%AF%E5%9F%8E.md#1">山景城</a>（Mountain View）有争议的雇员“<ahref="https://github.com/voebtn370/djy/blob/master/gb/tag/%E4%BA%BA%E5%A4%B4%E7%A8%8E.md#1">人头税</a>”（head tax），1月1日起生效，这一税收政策，主要针对谷歌（Google）这样的大型<ahref="https://github.com/voebtn370/djy/blob/master/gb/tag/%E9%AB%98%E7%A7%91%E6%8A%80%E5%85%AC%E5%8F%B8.md#1">高科技公司</a>，说法是这些税收，将用于缓解这些巨头们对城市交通、社会服务等所造成的各方面影响。</p>
+<p>【大纪元2020年01月02日讯】（大纪元记者周凤临综合报导）<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%A1%85%E8%B0%B7.md#1">硅谷</a><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%B1%B1%E6%99%AF%E5%9F%8E.md#1">山景城</a>（Mountain View）有争议的雇员“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BA%BA%E5%A4%B4%E7%A8%8E.md#1">人头税</a>”（head tax），1月1日起生效，这一税收政策，主要针对谷歌（Google）这样的大型<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%AB%98%E7%A7%91%E6%8A%80%E5%85%AC%E5%8F%B8.md#1">高科技公司</a>，说法是这些税收，将用于缓解这些巨头们对城市交通、社会服务等所造成的各方面影响。</p>
 <p>这一按照雇员多少征税的办法，其造成的争议也是明显的：对公司方面来说，增加税收等于是将公司推到其它地方去，不利工作机会的增加，但对于支持这一税法的人来说，这些增加的税收，将投资于公共交通和住房项目，为城市社区带来福利。</p>
-<p>新的税法于2018年由选民投票通过，预计每年将为<ahref="https://github.com/voebtn370/djy/blob/master/gb/tag/%E5%B1%B1%E6%99%AF%E5%9F%8E.md#1">山景城</a>增加大约600万美元税收，其中互联网搜索巨头谷歌作为山景城最大的雇主，将缴税约330万美元。</p>
+<p>新的税法于2018年由选民投票通过，预计每年将为<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%B1%B1%E6%99%AF%E5%9F%8E.md#1">山景城</a>增加大约600万美元税收，其中互联网搜索巨头谷歌作为山景城最大的雇主，将缴税约330万美元。</p>
 <p>随着新税法生效，山景城将成为一个引人瞩目的案例，全美各地有许多城市可能会考虑效仿。</p>
-<p>苹果公司所在城市库柏蒂诺（Cupertino），2018年也曾经讨论过<ahref="https://github.com/voebtn370/djy/blob/master/gb/tag/%E4%BA%BA%E5%A4%B4%E7%A8%8E.md#1">人头税</a>，但在苹果公司游说下放弃，但库柏蒂诺可能会重新讨论这一提案；帕罗阿图（Palo Alto）在考察山景城从起草到实施人头税的整个过程之后，于2星期前也准备酝酿类似的提案，经济委员会成员，已敦促市议会讨论人头税提案。</p>
+<p>苹果公司所在城市库柏蒂诺（Cupertino），2018年也曾经讨论过<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BA%BA%E5%A4%B4%E7%A8%8E.md#1">人头税</a>，但在苹果公司游说下放弃，但库柏蒂诺可能会重新讨论这一提案；帕罗阿图（Palo Alto）在考察山景城从起草到实施人头税的整个过程之后，于2星期前也准备酝酿类似的提案，经济委员会成员，已敦促市议会讨论人头税提案。</p>
 <p>作为人头税的支持者，山景城前市长雷尼?西格尔（Lenny Siegel）认为，人头税将为市府处理工作、住房均衡，以及改善铁路等公共交通设施，提供足够的财力，是非常有必要的。</p>
 <p>西格尔表示，直接收取税收而非依赖大公司的捐助，是因为吸引大的基础设施投资，需要一个基本资金做基础，而这一基础无法通过捐助来实现。西格尔还称，收取人头税，也是在为这些大公司所需要的基础设施投资，提供一个稳定的资金来源。</p>
-<p>与华盛顿（Washington）州的西雅图（Seattle）市提出的人头税提案，在亚马逊（Amazon）为首的<ahref="https://github.com/voebtn370/djy/blob/master/gb/tag/%E9%AB%98%E7%A7%91%E6%8A%80%E5%85%AC%E5%8F%B8.md#1">高科技公司</a>强烈反对之下而流产不同，西格尔表示，谷歌并未在私下或者公开场合，表示过反对，这是因为谷歌理解，随着更多雇员到山景城工作，必将为现有城市设置，造成各方面的压力。</p>
+<p>与华盛顿（Washington）州的西雅图（Seattle）市提出的人头税提案，在亚马逊（Amazon）为首的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%AB%98%E7%A7%91%E6%8A%80%E5%85%AC%E5%8F%B8.md#1">高科技公司</a>强烈反对之下而流产不同，西格尔表示，谷歌并未在私下或者公开场合，表示过反对，这是因为谷歌理解，随着更多雇员到山景城工作，必将为现有城市设置，造成各方面的压力。</p>
 <p>山景城市府报告称，在过去10年间，谷歌园区的雇员倍增，从原来的1万名雇员增加到超过2.3万名，而该市第二大雇主赛门铁克（Symantec）仅有2,800名雇员。</p>
 <p>为了不至于对小商业造成大的冲击，人头税提案仅适用于雇员人数在50人以上的企业，而对50人以下的小企业，每年只需缴纳100美元到400美元的统一税（flat rate）。</p>
 <p>除此之外，对于山景城差不多3,700家雇员最多只有50人的小企业来说，人头税也只需要每人每年75美元；对雇员超过50人的不同规模的公司来说，人头税的税率也有所变化，最多为每人每年150美元。</p>
-<p>但“<ahref="https://github.com/voebtn370/djy/blob/master/gb/tag/%E7%A1%85%E8%B0%B7.md#1">硅谷</a>领导者团体”（Silicon Valley Leadership Group）执行长卡尔?瓜蒂诺（Carl Guardino）认为，这些措施并不足以保住山景城的公司。瓜蒂诺表示，按照岗位来收税并非一项可持续的城市政策，他3年来一直警告市府官员称，此类政策将会驱使公司离开，或者保持现有规模限制发展。</p>
+<p>但“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%A1%85%E8%B0%B7.md#1">硅谷</a>领导者团体”（Silicon Valley Leadership Group）执行长卡尔?瓜蒂诺（Carl Guardino）认为，这些措施并不足以保住山景城的公司。瓜蒂诺表示，按照岗位来收税并非一项可持续的城市政策，他3年来一直警告市府官员称，此类政策将会驱使公司离开，或者保持现有规模限制发展。</p>
 <p>瓜蒂诺还表示，不相信山景城官员会信守承诺，将这些税收真正80%用于交通设施基础建设方面投资，另外20%用于住房建设。◇</p>
 <p>（此文发表于1271C期旧金山湾区新闻版）</p>
 <p><b><a style="color: #3339ff;" href="https://www.facebook.com/sfdjy/">关注我们facebook主页，及时获得更多资讯，请点这里。</a></b></p>
@@ -26,48 +26,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/voebtn370/djy/blob/master/gb/18/10/4/n10759757.md#1">硅谷山景城开大麻店  抗议民众挤爆市议会</a></li>
-<li><a href="https://github.com/voebtn370/djy/blob/master/gb/18/11/8/n10838143.md#1">谷歌通勤巴士硅谷山景城撞死自己员工</a></li>
-<li><a href="https://github.com/voebtn370/djy/blob/master/gb/19/3/1/n11081464.md#1">硅谷山景城获批大麻店有望被撤      市议会拟推翻前案</a></li>
-<li><a href="https://github.com/voebtn370/djy/blob/master/gb/19/3/7/n11095738.md#1">硅谷山景城重启大麻讨论  居民获部分胜利</a></li>
-<li><a href="https://github.com/voebtn370/djy/blob/master/gb/19/3/7/n11095758.md#1">硅谷山景城副市长：大麻问题与种族无关</a></li>
-<li><a href="https://github.com/voebtn370/djy/blob/master/gb/19/3/13/n11110563.md#1">硅谷山景城科技公司CEO座驾Tesla 一年半内车窗被砸四次</a></li>
-<li><a href="https://github.com/voebtn370/djy/blob/master/gb/19/5/13/n11253925.md#1">山景城中医治疗中心 免费义诊</a></li>
-<li><a href="https://github.com/voebtn370/djy/blob/master/gb/19/5/25/n11279180.md#1">居民抗议奏效   硅谷山景城禁大麻零售店</a></li>
-<li><a href="https://github.com/voebtn370/djy/blob/master/gb/19/7/22/n11401590.md#1">缓解住房危机 山景城采用新可负担房规定</a></li>
-<li><a href="https://github.com/voebtn370/djy/blob/master/gb/20/11/9/n12535134.md#1">湾区气温渐低 周五将迎来大雨</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/4/n10759757.md#1">硅谷山景城开大麻店  抗议民众挤爆市议会</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/11/8/n10838143.md#1">谷歌通勤巴士硅谷山景城撞死自己员工</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/3/1/n11081464.md#1">硅谷山景城获批大麻店有望被撤      市议会拟推翻前案</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/3/7/n11095738.md#1">硅谷山景城重启大麻讨论  居民获部分胜利</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/3/7/n11095758.md#1">硅谷山景城副市长：大麻问题与种族无关</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/3/13/n11110563.md#1">硅谷山景城科技公司CEO座驾Tesla 一年半内车窗被砸四次</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/5/13/n11253925.md#1">山景城中医治疗中心 免费义诊</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/5/25/n11279180.md#1">居民抗议奏效   硅谷山景城禁大麻零售店</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/7/22/n11401590.md#1">缓解住房危机 山景城采用新可负担房规定</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11945757.md#1">应对武汉肺炎疫情 旧金山要求民众待在家里</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/15/n9842766.md#1" target="_blank">围墙不是永久景观——从柏林墙说起</a></li><li><a href="https://github.com/voebtn370/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/10/n11375488.md#1" target="_blank">冤狱11年半 前大陆律师堂堂正正反迫害 ?</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/2/n11563735.md#1" target="_blank">林辉：中共70年来的弥天大谎</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/12/n11252250.md#1" target="_blank">大陆公安 从参与迫害到修炼法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/9/3/n12378228.md#1">明朝神奇歌谣 寥寥数语 隐含天下变局</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/4/n12523568.md#1">被预言选中的人：川普和曹操</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/10/31/n12515858.md#1">预言试析：揭开魔鬼“666”真面目</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/9/30/n12442873.md#1">《圣经》与《推背图》预言的应验与变换7</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/9/30/n12442866.md#1">《圣经》与《推背图》预言的应验与变换6</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/8/n12533225.md#1">【十字路口】拜登胜选？五大风暴来袭</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/7/n12532767.md#1">【重播】拜登自行宣布当选 美多州集会抗议</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/8/n12534135.md#1">【大陆新闻解毒 】时事小品：党媒报导怎样出炉的</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/7/n12531603.md#1">摇摆州出现奇怪数据 吹哨人举报费城邮局</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/6/n12529890.md#1">【大选更新11.6】川普：拜登不应错误宣称胜选</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/7/n12532904.md#1">网路热传民间道人解密 美大选惊动天神助川普</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/6/n12529759.md#1">子瑜单脚维持坐姿获赞好厉害 TWICE再获冠军</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/5/n12528285.md#1">获前空姐分享贴心事 发哥下机前一句话超暖心</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/5/n12528061.md#1">与李晨分手一年半 范冰冰到佛寺跪地或求姻缘</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/6/n12529961.md#1">SUGA肩膀动手术需休养 暂缺席BTS《BE》宣传</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/6/n12529197.md#1">TWICE彩瑛与刺青师恋爱？ 公司：无官方立场</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/6/n12530332.md#1">茼蒿是抗病毒、减肥的良伴 营养师推荐2吃法</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/3/n12521072.md#1">浴室、厨房是霉菌最喜欢的地方 3妙方除霉</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/6/n12530506.md#1">勾芡食物要少吃 可让血糖飙高 留意5种台湾美食</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/8/n12533391.md#1">台18岁男子昏迷62天 听到“吃鸡排”醒了</a></li>
-<li><a href="https://github.com/pnfxvr3071/djy/blob/master/gb/20/11/6/n12529168.md#1">对比美国大选 美退役准将赞台湾开票透明</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/16/n11945338.md#1">外国疫情已失控？小粉红煽动回国被恶搞</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/11/8/n11641181.md#1">【医案】老天的考卷</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/voebtn370/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/voebtn370/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/2/n11762093.htm">硅谷山景城   率先实施雇员人头税 年增约600万美元</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/2/n11762093.htm">硅谷山景城   率先实施雇员人头税 年增约600万美元</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/voebtn370/djy/blob/master/gb/20/1/2/n11762093.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/voebtn370/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/voebtn370/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/voebtn370/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/voebtn370/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/voebtn370/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/1/2/n11762093.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
